[package]
name = "jpeg2000_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Pure Rust JPEG 2000 fundamentals: reversible 5/3 DWT, RCT, and MQ arithmetic coding."
keywords = ["jpeg2000", "jp2", "wavelet", "mq-coder", "image-codec"]
categories = ["compression", "multimedia"]

[dependencies]

[dev-dependencies]
rand = "0.8"
